First complete version

--- a/module2assignment/index.html
+++ b/module2assignment/index.html
@@ -4,16 +4,32 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap Starter Page</title>
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/styles.css">
+    <title>Module 2 assignment</title>
+    <link rel="stylesheet" href="style.css">
   </head>
 <body>
-    <p>test</p>
-
-  <!-- jQuery (Bootstrap JS plugins depend on it) -->
-  <script src="js/jquery-3.0.0.min"></script>
-  <script src="js/bootstrap.min.js"></script>
-  <script src="js/script.js"></script>
+  <header>
+     <h1>Our menu</h1>
+  </header>
+  <div class="row">
+    <div class="col-sm-12 col-md-6 col-lg-4 ">
+     <section id="chicken"> 
+      <h2 id="chickenh2">Chicken</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit esse, neque perferendis voluptas vitae odio deserunt, repellat nam asperiores iste numquam perspiciatis in dolor quaerat hic impedit sequi, repellendus facere nesciunt accusamus expedita dolore! Ipsam, dignissimos modi aut eligendi numquam.</p>
+    </section>
+    </div>
+    <div class="col-sm-12 col-md-6 col-lg-4">
+     <section id="beef">
+      <h2 id="beefh2">Beef</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum ut delectus fuga ipsum libero perspiciatis commodi explicabo dolorem, sit eum porro, reiciendis cumque non praesentium adipisci natus! Explicabo enim quis, velit provident, pariatur at neque suscipit, aut unde esse deleniti!</p>
+      </section>
+    </div>
+    <div class="col-sm-12 col-md-12 col-lg-4">
+      <section id="sushi">
+      <h2 id="sushih2">Sushi</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto tempore quo commodi soluta, dolorum officiis, quisquam cum nisi molestias, optio fugiat aut tenetur totam suscipit blanditiis facere aliquam vero, veniam cupiditate maxime. Explicabo labore, totam exercitationem, earum sequi praesentium alias.</p>
+      </section>
+    </div>
+  </div>   
 </body>
 </html>
